--- a/src/views/products/editar-producto.ejs
+++ b/src/views/products/editar-producto.ejs
@@ -141,9 +141,13 @@
             action="/products?_method=DELETE"
             method="POST"
           >
-            <button type="submit" class="product-delete-button">
-              Eliminar producto
-            </button>
+            <input
+              type="submit"
+              class="product-delete-button"
+              value="Eliminar"
+            />
+            <!--Eliminar producto
+            </button> -->
           </form>
         </div>
       </section>
