--- a/src/views/products/products.ejs
+++ b/src/views/products/products.ejs
@@ -9,11 +9,15 @@
       <div class="display-pag">
         <section>
           <div class="contenedor-todo-filtros">
-            <div>
+            <div class="contenedor-titulo">
               <h2>Filtrar</h2>
             </div>
 
-            <div></div>
+            <div>
+              <h3>Categoría</h3>
+
+              <div><%products.foreach(product => {%> <%})%></div>
+            </div>
           </div>
         </section>
 
