--- a/src/views/products/editar-producto.ejs
+++ b/src/views/products/editar-producto.ejs
@@ -12,7 +12,7 @@
         <h2>Editando el Producto "<%= productToEdit.name %>"</h2>
         <form
           class="edit-product"
-          action="/products?_method=PUT"
+          action="/products/<%=productToEdit.id%>?_method=PUT"
           method="POST"
           enctype="multipart/form-data"
         >
@@ -138,14 +138,12 @@
         <div>
           <form
             class="delete-product"
-            action="/products?_method=DELETE"
+            action="/products/<%=productToEdit.id%>?_method=DELETE"
             method="POST"
           >
-            <input
-              type="submit"
-              class="product-delete-button"
-              value="Eliminar"
-            />
+            <button type="submit" class="product-delete-button">
+              Eliminar
+            </button>
             <!--Eliminar producto
             </button> -->
           </form>
