--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -16,8 +16,7 @@
             <div class="contenedor-inputs">
               <div class="label-input">
                 <label for="name" class="form-label"
-                  >Nombre del producto:</label
-                >
+                  >Nombre del producto:</label>
                 <input
                   type="text"
                   id="name"
