--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Perfil</title>
+  </head>
+  <body>
     <h1>Perfil</h1>
-  
-    <div>
-        Bienvenido my friend <%= user.name %> 
-    </div>
-   
-</body>
+
+    <div>Bienvenido my friend, <%= user.name %></div>
+  </body>
 </html>
