hice el user admin, arregle el registro y los middlewares

--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -29,7 +29,7 @@
     <main>
         <section class="cuadro">
             <div class="saludo-logo">Registrarse</div>
-            <form method="POST" action="/users/registro" enctype="multipart/form-data">
+            <form method="POST" action="/users/registro"> <!-- volver a agregar el enctype cuando necesitemos subir foto si es necesario -->
                 <div class="register">
                     <div>
         <!-- en class le estoy pidiendo que si hay un error use en in-valid que me recuadra en rojo el espacio, igual no esta funcionando...-->
