Le agregue el recordar usuario al proces login

--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -52,7 +52,7 @@
             </form>
             <div class="caja-links">
                 <div class="recordar">
-                    <input type="checkbox">
+                    <input type="checkbox" name="rememberme">
                     <p>Recordame</p></div>
                 <div class="letra-chica">
                     <div><a class="pregunta" href="/users/password">¿Olvidaste tu contraseña?</a></div>
