--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -9,11 +9,11 @@
   <body>
     <h1>Perfil de usuario</h1>
     <p>Nombre: <%= user.name %></p>
-    <p>Apellido: <%= user.fullName %></p>
+    <p>Apellido: <%= user.lastName %></p>
     <p>Correo electrónico: <%= user.email %></p>
     <p>Nombre de usuario: <%= user.userName %></p>
     <p>Dirección: <%= user.adress %></p>
     <p>Imagen de perfil: <img src="<%= user.image %>" alt="Imagen de perfil"></p>
-    <a href="/editar-perfil"><button>Editar perfil</button></a>
+    <a href="/users/editar-perfil"><button>Editar perfil</button></a>
   </body>
   </html>
