--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -12,7 +12,7 @@
         </div>
 
         <div class="contenedor-form">
-          <form action="/products/" method="POST" enctype="multipart/form-data">
+          <form action="/products" method="POST">
             <div class="contenedor-inputs">
               <div class="label-input">
                 <label for="name" class="form-label"
