--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -32,5 +32,7 @@
     <link rel="stylesheet" href="/css/detalles.css" />
     <link rel="stylesheet" href="/css/products.css" />
     <link rel="stylesheet" href="/css/crear-producto.css" />
+    <link rel="stylesheet" href="/css/perfil.css" />
+    <link rel="stylesheet" href="/css/editar-perfil.css" />
   </head>
 </html>
