Avances css perfil

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!--Vuelve el sitio responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grupo 3</title>
+    <title>Wine House</title>
     <!-- Vinculo el archivo normalize que sirve para que la pagina se vea siempre bien -->
     <link rel="stylesheet" href="/css/normalize.css" />
     <!-- Las siguientes 3 lineas las copie de google fonts -->
