--- a/public/css/editar-perfil.css
+++ b/public/css/editar-perfil.css
@@ -1,54 +1,50 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing:border-box;
-    font-family: 'Roboto', sans-serif;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 h1 {
-    color: #80083F;
+  color: #80083f;
 }
-
 
 .edit-profile {
-    text-align: center;
+  text-align: center;
 }
 
-input{
-    width: 75%;
-    padding: 5px 5px;
-    border: solid 1px #b9b7b8;
-    border-radius: 12px;
+input .edit-input {
+  width: 75%;
+  padding: 5px 5px;
+  border: solid 1px #b9b7b8;
+  border-radius: 12px;
 }
-.edit-button{
-    background-color: #80083F;
-    color: white;
+.edit-button {
+  background-color: #80083f;
+  color: white;
 }
-label {
-    position: absolute;
-    width: 75%;
-    left: 10px;
-    float: left
+label .edit-label {
+  position: absolute;
+  width: 75%;
+  left: 10px;
+  float: left;
 }
-
-
 
 /********* Navegacion Celulares *************/
 
-@media (min-width: 460px){
-    input{
-        width: 70%;
-    }
-    
+@media (min-width: 460px) {
+  input {
+    width: 70%;
+  }
 }
 
 /*************** Navegacion Tablets *********/
 
-@media (min-width: 769px){ 
-    input{
-        width: 50%;
-    }
+@media (min-width: 769px) {
+  input {
+    width: 50%;
+  }
 
-   /* header{
+  /* header{
         flex-direction: row;
         justify-content: space-between;
         box-shadow: 0px 3px 6px #00000029;
@@ -109,11 +105,11 @@ label {
 
 /*************** Navegacion Desktop *********/
 
-@media (min-width: 1280px){
-    input{
-        width: 35%;
-    }
-    /*header{
+@media (min-width: 1280px) {
+  input {
+    width: 35%;
+  }
+  /*header{
         flex-direction: row;
         justify-content: space-between;
     }
