--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -1,2 +1,38 @@
-.asd {
+main {
+  padding: 250px 20px;
+}
+
+.contenedor-ambos {
+  display: flex;
+  justify-content: space-between;
+  margin: 45px;
+}
+
+.contenedor-perfil {
+  display: flex;
+  background-color: #80083f;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 40px 80px;
+  flex-direction: column;
+}
+
+.contenedor-info-personal {
+  display: flex;
+  flex-direction: column;
+  border: solid 1px lightgray;
+  height: 500px;
+  width: 500px;
+}
+
+.contenedor-circulo {
+  display: flex;
+  justify-content: center;
+}
+
+.circulo-img {
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  background-color: white;
 }
