--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -1,67 +1,84 @@
-<%- include("../partials/head.ejs") %> 
+<%- include("../partials/head.ejs") %>
 <body>
-    <%- include("../partials/header.ejs") %>
-    <main>
-        <div class="return">
-            <a href="/"><i class="fa-solid fa-angle-left"></i> Volver</a>
+  <%- include("../partials/header.ejs") %>
+  <main>
+    <div class="return">
+      <a href="/"><i class="fa-solid fa-angle-left"></i> Volver</a>
+    </div>
+    <div class="box-product">
+      <div class="box-img-price-description">
+        <img
+          class="wine"
+          src="/images/productImages/Serbal-Pinot Noir.jpeg"
+          alt="WineHouse"
+        />
+        <div class="price">$1.750</div>
+        <div class="description">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+          possimus itaque esse neque laudantium eos beatae iste, molestiae,
+          ipsam facilis nemo vero animi assumenda.
         </div>
-        <div class="box-product">
-            <div class="box-img-price-description">
-                <img class="wine" src="/images/productImages/Serbal-Pinot Noir.jpeg" alt="WineHouse">
-                <div class="price">$1.750</div>
-                <div class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Doloribus possimus itaque esse neque laudantium eos beatae iste, molestiae, ipsam facilis nemo vero animi assumenda.
-                </div>    
-            </div>
-            <div class="bottom-product-box">
-                <div class="box-cantidad-delete">
-                    <div class="cantidad">
-                        <i class="fa-solid fa-minus"></i> 1 <i class="fa-solid fa-plus"></i>
-                    </div>
-                </div> 
-                <div class="delete">
-                    <div>eliminar <i class="fa-solid fa-trash-can"></i></div>
-                </div>       
-            </div>
+      </div>
+      <div class="bottom-product-box">
+        <div class="box-cantidad-delete">
+          <div class="cantidad">
+            <i class="fa-solid fa-minus"></i> 1 <i class="fa-solid fa-plus"></i>
+          </div>
         </div>
-        <div class="box-desktop">
-            <div class="box-list">
-                <div class="column">
-                    <div class="box-title">Producto</div>
-                    <img class="wine" src="/images/productImages/Serbal-Pinot Noir.jpeg" alt="WineHouse">
-                </div>
-                <div class="column-special">Serbal Pinot Noir 750cc</div>
-                <div class="column">
-                    <div class="box-title">Precio unitario</div>
-                    <div class="column-middle">$1.750</div>
-                </div>
-                <div class="column">
-                    <div class="box-title">Precio cantidad</div>
-                    <div class="column-middle"><i class="fa-solid fa-minus"></i> 2 <i class="fa-solid fa-plus"></i></div>
-                </div>
-                <div class="column">
-                    <div class="box-title">Subtotal</div>
-                    <div class="column-middle">$3.500</div>
-                </div>
-                <div class="column-special">
-                    <i class="fa-solid fa-trash-can"></i>
-                </div>
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
-            <div class="box-compra">
-                <div class="title">Resumen de compra</div>
-                <div class="sub-title">
-                    <i class="fa-solid fa-percent"></i>
-                    <input class="box-discount" type="text" name="descuento" placeholder="Código de descuento">
-                </div>
-                <div class="list-articles"></div>
-                <div class="pay-button">Pagar</div>
-                <div class="continue-button">
-                    <i class="fa-solid fa-angle-left"></i>   seguir comprando
-                </div>   
-            </div>
+        <div class="delete">
+          <div>eliminar <i class="fa-solid fa-trash-can"></i></div>
         </div>
-    </main>
-    <%- include("../partials/footer.ejs") %>
+      </div>
+    </div>
+    <div class="box-desktop">
+      <div class="box-list">
+        <div class="column">
+          <div class="box-title">Producto</div>
+          <img
+            class="wine"
+            src="/images/productImages/Serbal-Pinot Noir.jpeg"
+            alt="WineHouse"
+          />
+        </div>
+        <div class="column-special">Serbal Pinot Noir 750cc</div>
+        <div class="column">
+          <div class="box-title">Precio unitario</div>
+          <div class="column-middle">$1.750</div>
+        </div>
+        <div class="column">
+          <div class="box-title">Precio cantidad</div>
+          <div class="column-middle">
+            <i class="fa-solid fa-minus"></i> 2 <i class="fa-solid fa-plus"></i>
+          </div>
+        </div>
+        <div class="column">
+          <div class="box-title">Subtotal</div>
+          <div class="column-middle">$3.500</div>
+        </div>
+        <div class="column-special">
+          <i class="fa-solid fa-trash-can"></i>
+        </div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <div class="box-compra">
+        <div class="title">Resumen de compra</div>
+        <div class="sub-title">
+          <i class="fa-solid fa-percent"></i>
+          <input
+            class="box-discount"
+            type="text"
+            name="descuento"
+            placeholder="Código de descuento"
+          />
+        </div>
+        <div class="list-articles"></div>
+        <div class="pay-button">Pagar</div>
+        <div class="continue-button">
+          <i class="fa-solid fa-angle-left"></i> seguir comprando
+        </div>
+      </div>
+    </div>
+  </main>
+  <%- include("../partials/footer.ejs") %>
 </body>
