--- a/src/views/users/editar-perfil.ejs
+++ b/src/views/users/editar-perfil.ejs
@@ -73,7 +73,15 @@
         name="confirmPassword"
       /><br />
       <br />
-      <input class="edit-button" type="submit" value="Actualizar" />
-    </form>
+      <% if(locals.errors && errors.password) {%> 
+        <div class="text-danger">
+            <%= errors.password.msg %>
+        </div>
+    <% } %> 
+    <input class="edit-button" type="submit" value="Actualizar" />
+  </form>
+  <div class="back">
+    <a class="back-button"href="/users/perfil">Volver</a>
+  </div>
   </body>
 </html>
