--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -64,7 +64,7 @@
                 <label for="size" class="form-label">Tamaño:</label>
                 <input
                   type="text"
-                  id="size"
+                  id="size_id"
                   name="size_id"
                   placeholder="Ej: 750"
                   class="form-input"
@@ -94,7 +94,7 @@
                 <label for="provincia" class="form-label">Provincia:</label>
                 <input
                   type="text"
-                  id="provincia"
+                  id="province_id"
                   name="province_id"
                   placeholder="Ej: Mendoza"
                   class="form-input"
@@ -108,7 +108,7 @@
               <div class="label-input">
                 <label for="category" class="form-label">Categoría:</label>
                 <input
-                  type="category"
+                  type="category_id"
                   id="category_id"
                   name="category_id"
                   placeholder="Categoría"
@@ -123,7 +123,7 @@
               <div class="label-input">
                 <label for="description" class="form-label">Descripción:</label>
                 <textarea
-                  id="description"
+                  id="description_id"
                   name="description_id"
                   placeholder="Descripción del producto"
                   class="description-input"
@@ -138,7 +138,7 @@
                 <label for="image" class="form-label"
                   >Imagen del producto:</label
                 >
-                <input type="file" id="image" name="image_id" class="input-foto" />
+                <input type="file" id="image_id" name="image_id" class="input-foto" />
               </div>
               <% if(locals.errors && errors.image) {%>
               <div class="text-danger"><%= errors.image.msg %></div>
