dejo funcionando ok el detallesDB en el productControllers

--- a/src/views/products/detalles.ejs
+++ b/src/views/products/detalles.ejs
@@ -125,7 +125,7 @@
                 </div>
 
                 <div class="details descripcion-producto">
-                  <p><%= product.description%></p>
+                  <p><%= product.description_id%></p>
                 </div>
               </div>
             </div>
